[package]
name = "try-actix-web"
version = "0.1.0"
authors = ["karur4n <karuran.f@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "2"
serde = "1.0.114"
serde_derive = "1.0.114"
